--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -21,7 +21,7 @@
     <string name="app_name">FlipFlap</string>
     <string name="notification_title">Smart cover detectada</string>
     <string name="alarm_label">ALARME</string>
-    <string name="abbrev_wday_month_day_no_year">EEE, d \'de\' MMMM</string>
+    <string name="abbrev_wday_month_day_no_year">EEE, d MMMM</string>
     <string name="answer_call">ATENDER</string>
     <string name="ignore_call">IGNORAR</string>
     <string name="end_call">ENCERRAR CHAMADA</string>
